# python_celery

./: .gitignore  README.md  celerybeat-schedule  dump.rdb  main.py  pyproject.toml
app/: tasks.py  worker.py
